1.stylus stylus-loader 全局配置2.海报组件完善 3.首页布局

--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -4,3 +4,4 @@ $linkColor = #e6b23e // 焦點颜色
 $defaultFontColor = #2c3e50 //默認字體顏色
 
 $bgImg = assets\/images\/hollywoodBG\.jpg //背景
+//$leftTopIcon = \.\.\/assets\/images\/rankings.png //红色小角标
