--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -1,8 +1,20 @@
+/*UI*/
+
+//font
 $defaultFontFamily = 'Avenir', Helvetica, Arial, sans-serif  //默认全局字体
 
+//color
 $linkColor = #e6b23e // 焦點颜色
 $defaultFontColor = #2c3e50 //默認字體顏色
 $whiteFontColor = #E2E2E2
-	
+$greyColor = #898989
+$blackColor = #000000
+
+//BG	
 $bgImg = assets\/images\/hollywoodBG\.jpg //背景
-//$leftTopIcon = \.\.\/assets\/images\/rankings.png //红色小角标
+
+//icon
+$leftTopIcon = \.\.\/assets\/images\/rankings\.png //红色小角标
+$searchIcon = \.\.\/\.\.\/assets\/images\/search_icon\.png  //搜索图标
+$personalIcon = \.\.\/\.\.\/assets\/images\/personal_icon\.png  //个人中心图标
+$exitIcon = \.\.\/\.\.\/assets\/images\/exit_icon\.png  //退出图标
