--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -4,3 +4,39 @@
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
 }
+
+/*.image-left-in {
+    left: -1280px;
+    opacity: 0;
+    -webkit-animation: image-left-in 2s ease-in 1 forwards 1s;
+    animation: image-left-in 2s ease-in 1 forwards 1s;
+}
+
+.image-left-out {
+    -webkit-animation: image-left-out 1s ease-in-out 1 forwards;
+    animation: image-left-out 1s ease-in-out 1 forwards;
+}
+
+.image-right-in {
+    left: 800px;
+    opacity: 0;
+    -webkit-animation: image-right-in 2s ease-in 1 forwards 1.5s;
+    animation: image-right-in 2s ease-in 1 forwards 1.5s;
+}
+
+.image-right-out {
+    -webkit-animation: image-right-out 1s ease-in-out 1 forwards;
+    animation: image-right-out 1s ease-in-out 1 forwards;
+}
+
+.image-fade-in {
+    opacity: 0;
+    -webkit-animation: image-fade-in 2s ease-in 1 forwards 1s;
+    animation: image-fade-in 2s ease-in 1 forwards 1s;
+}
+
+.image-fade-out {
+    -webkit-animation: image-fade-out 3s ease-in-out 1 forwards;
+    animation: image-fade-out 3s ease-in-out 1 forwards;
+}
+*/
