vuex 管理全局变量 首页跳转到详情页 详情页切换剧集更新数据 不刷新页面

--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -1,7 +1,7 @@
 /*UI*/
 
 //font
-$defaultFontFamily = 'Avenir', Helvetica, Arial, sans-serif  //默认全局字体
+$defaultFontFamily = Helvetica, sans-serif  //默认全局字体
 
 //color
 $linkColor = #e6b23e // 焦點颜色
@@ -9,6 +9,7 @@ $defaultFontColor = #2c3e50 //默認字體顏色
 $whiteFontColor = #E2E2E2
 $greyColor = #898989
 $blackColor = #000000
+$blueFontColor = #3B6BA5
 
 //BG	
 $bgImg = assets\/images\/hollywoodBG\.jpg //背景
