--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5,38 +5,25 @@
     overflow: -moz-scrollbars-none;
 }
 
-/*.image-left-in {
-    left: -1280px;
-    opacity: 0;
-    -webkit-animation: image-left-in 2s ease-in 1 forwards 1s;
-    animation: image-left-in 2s ease-in 1 forwards 1s;
+a{
+    -webkit-tap-highlight-color: transparent;
+    -webkit-user-modify:read-only;
+    text-decoration: none;
+    outline:none;
+    display: inline-block;
 }
 
-.image-left-out {
-    -webkit-animation: image-left-out 1s ease-in-out 1 forwards;
-    animation: image-left-out 1s ease-in-out 1 forwards;
+/**
+ * link的默认颜色
+ */
+:-webkit-any-link {
+    color: #E2E2E2;
 }
 
-.image-right-in {
-    left: 800px;
-    opacity: 0;
-    -webkit-animation: image-right-in 2s ease-in 1 forwards 1.5s;
-    animation: image-right-in 2s ease-in 1 forwards 1.5s;
+/**
+ * https://www.jianshu.com/p/90767d2a8ab5
+ * img属于内联元素,而内敛元素会以基线对齐 解决方案 
+ */
+img{
+    vertical-align: top
 }
-
-.image-right-out {
-    -webkit-animation: image-right-out 1s ease-in-out 1 forwards;
-    animation: image-right-out 1s ease-in-out 1 forwards;
-}
-
-.image-fade-in {
-    opacity: 0;
-    -webkit-animation: image-fade-in 2s ease-in 1 forwards 1s;
-    animation: image-fade-in 2s ease-in 1 forwards 1s;
-}
-
-.image-fade-out {
-    -webkit-animation: image-fade-out 3s ease-in-out 1 forwards;
-    animation: image-fade-out 3s ease-in-out 1 forwards;
-}
-*/
