--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -27,3 +27,13 @@ a{
 img{
     vertical-align: top
 }
+
+html{
+    width:100%;
+    height:100%;
+}
+
+body{
+    width:100%;
+    height:100%;
+}
