--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,30 +1,3 @@
-
-* {
-    margin: 0;
-    padding: 0;
-    -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
-}
-
-a{
-    -webkit-tap-highlight-color: transparent;
-    -webkit-user-modify:read-only;
-    text-decoration: none;
-    outline:none;
-    display: inline-block;
-}
-
-/**
- * link的默认颜色
- */
-:-webkit-any-link {
-    color: #ffffff;
-}
-
-/**
- * https://www.jianshu.com/p/90767d2a8ab5
- * img属于内联元素,而内敛元素会以基线对齐 解决方案 
- */
-img{
-	vertical-align: top
+html {
+    min-width: 720px;
 }
